it/snapshots/cli__project_list_reports_removed_hostnames_config_key.snap
---
source: it/cli.rs
expression: "(link, list)"
---
(
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Linked https://acme-store.test -> <tempdir>/Acme Store\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nacme-store.test  served  8.4  config-invalid  unknown  invalid  <tempdir>/Acme Store\n  config: unknown Project config key `hostnames`\n",
        stderr: "",
    },
)
