it/snapshots/cli__project_list_shows_project_and_mode_for_served_and_resource_only_projects.snap
---
source: it/cli.rs
expression: "(link_served, link_resource_only, list)"
---
(
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Linked https://alpha.test -> <tempdir>/Zulu Web\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Linked beta-data (resource-only) -> <tempdir>/Beta Data\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nalpha.test  served  default  unknown  0  none  <tempdir>/Zulu Web\nbeta-data  resource-only  default  unknown  0  none  <tempdir>/Beta Data\n",
        stderr: "",
    },
)
