it/snapshots/cli__rejects_space_separated_namespace_commands.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        2,
    ),
    stdout: "",
    stderr: "error: unrecognized subcommand 'php'\n\n  tip: some similar subcommands exist: 'php:uninstall', 'php:install', 'php:update', 'php:list', 'php:use'\n\nUsage: pv [OPTIONS] <COMMAND>\n\nFor more information, try '--help'.\n",
}
