it/snapshots/cli__routes_literal_colon_commands_without_space_aliases.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        1,
    ),
    stdout: "",
    stderr: "error: php:install is routed, but Managed Resource installs start after PV-023\n",
}
