it/snapshots/cli__rustfs_commands_are_documented.snap
---
source: it/cli.rs
expression: output
---
[
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Install a RustFS track\n\nUsage: pv rustfs:install [OPTIONS] [track]\n\nArguments:\n  [track]  RustFS track to install\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Update installed RustFS tracks\n\nUsage: pv rustfs:update [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Uninstall a RustFS track\n\nUsage: pv rustfs:uninstall [OPTIONS] <track>\n\nArguments:\n  <track>  RustFS track to uninstall\n\nOptions:\n      --no-color  Disable colored output\n      --prune     Remove PV-owned RustFS data for the track\n      --force     Remove the track even if Projects use it\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "List installed RustFS tracks\n\nUsage: pv rustfs:list [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Open the running RustFS console\n\nUsage: pv rustfs:open [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Install a RustFS S3 track\n\nUsage: pv s3:install [OPTIONS] [track]\n\nArguments:\n  [track]  RustFS track to install\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Update installed RustFS S3 tracks\n\nUsage: pv s3:update [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Uninstall a RustFS S3 track\n\nUsage: pv s3:uninstall [OPTIONS] <track>\n\nArguments:\n  <track>  RustFS track to uninstall\n\nOptions:\n      --no-color  Disable colored output\n      --prune     Remove PV-owned RustFS data for the track\n      --force     Remove the track even if Projects use it\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "List installed RustFS S3 tracks\n\nUsage: pv s3:list [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Open the running RustFS S3 console\n\nUsage: pv s3:open [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
]
