it/snapshots/cli__version_builds_and_runs_from_source.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        0,
    ),
    stdout: "pv 0.2.5\n",
    stderr: "",
}
